crates/ts-pack-core/tests/snapshots/wire_format__export_info_shape.snap
---
source: crates/ts-pack-core/tests/wire_format.rs
expression: "ExportInfo { name: \"foo\".to_string(), kind: ExportKind::Named, span: span(), }"
---
{
  "name": "foo",
  "kind": "Named",
  "span": {
    "start_byte": 10,
    "end_byte": 20,
    "start_line": 1,
    "start_column": 0,
    "end_line": 2,
    "end_column": 5
  }
}
