crates/ts-pack-core/tests/snapshots/wire_format__export_kind_serializes_as_bare_string-3.snap
---
source: crates/ts-pack-core/tests/wire_format.rs
expression: "ExportKind::ReExport"
---
"ReExport"
