crates/ts-pack-core/tests/snapshots/wire_format__structure_item_shape.snap
---
source: crates/ts-pack-core/tests/wire_format.rs
expression: "StructureItem\n{\n    kind: StructureKind::Function, name: Some(\"foo\".to_string()), visibility:\n    Some(\"pub\".to_string()), span: span(), children: vec![], decorators:\n    vec![\"#[inline]\".to_string()], doc_comment:\n    Some(\"/// A function.\".to_string()), signature:\n    Some(\"fn foo()\".to_string()), body_span: Some(span()),\n}"
---
{
  "kind": "Function",
  "name": "foo",
  "visibility": "pub",
  "span": {
    "start_byte": 10,
    "end_byte": 20,
    "start_line": 1,
    "start_column": 0,
    "end_line": 2,
    "end_column": 5
  },
  "decorators": [
    "#[inline]"
  ],
  "doc_comment": "/// A function.",
  "signature": "fn foo()",
  "body_span": {
    "start_byte": 10,
    "end_byte": 20,
    "start_line": 1,
    "start_column": 0,
    "end_line": 2,
    "end_column": 5
  }
}
